implemented get movies & get movie
