# docs/swagger.yaml
@@ -1,6 +1,61 @@
 basePath: /
 definitions:
-  kinolog.User:
+  models.Movie:
+    properties:
+      actors:
+        items:
+          $ref: '#/definitions/models.MovieActor'
+        type: array
+      description:
+        type: string
+      id:
+        type: integer
+      mark:
+        maximum: 10
+        minimum: 1
+        type: integer
+      poster_url:
+        type: string
+      review:
+        type: string
+      status:
+        enum:
+        - watched
+        - planned
+        type: string
+      title:
+        type: string
+      type:
+        enum:
+        - film
+        - serial
+        type: string
+      year:
+        type: integer
+    required:
+    - status
+    - title
+    - type
+    - year
+    type: object
+  models.MovieActor:
+    properties:
+      bio_url:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      role:
+        type: string
+    required:
+    - first_name
+    - last_name
+    - role
+    type: object
+  models.User:
     properties:
       avatar_url:
         type: string
@@ -10,7 +65,7 @@ definitions:
         type: string
       last_name:
         type: string
-      password_hash:
+      password:
         type: string
       registered_date:
         type: string
@@ -18,8 +73,16 @@ definitions:
     - email
     - first_name
     - last_name
-    - password_hash
-    - registered_date
+    - password
+    type: object
+  models.UserSignInRequest:
+    properties:
+      email:
+        default: marisasha228@bk.ru
+        type: string
+      password:
+        default: "123"
+        type: string
     type: object
 host: localhost:8000
 info:
@@ -34,6 +97,61 @@ info:
   title: TTL Kinolog API
   version: "1.0"
 paths:
+  /api/movies/:
+    get:
+      consumes:
+      - application/json
+      description: Посмотреть все фильмы пользователя
+      operationId: get-movies
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Посмотреть все фильмы
+      tags:
+      - movies
+  /api/movies/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Посмотреть фильм пользователя
+      operationId: get-movie
+      parameters:
+      - description: Id movie
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Посмотреть фильм
+      tags:
+      - movies
+  /api/movies/add:
+    post:
+      consumes:
+      - application/json
+      description: Добавляет новое кино
+      operationId: add-movie
+      parameters:
+      - description: Информация о кино
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.Movie'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Добавить кино
+      tags:
+      - movies
   /auth/sign-in:
     post:
       consumes:
@@ -46,7 +164,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/kinolog.User'
+          $ref: '#/definitions/models.UserSignInRequest'
       produces:
       - application/json
       responses: {}
@@ -65,7 +183,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/kinolog.User'
+          $ref: '#/definitions/models.User'
       produces:
       - application/json
       responses: {}
